build(架构): 架构结构调整，版本升级到5.0.0